2000-04-07  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10571: Completion/Core/_main_complete,
 	Completion/Core/_path_files: missing initialisations, -W with
 	multiple directories didn't work

2000-04-06  Clint Adams  <schizo@debian.org>
	* Felix Rosencrantz: 10564: Completion/X/_x_display:
	typo in _wanted.
	* 10565: acconfig.h, configure.in, Src/exec.c:
	add configure option for function depth limit.
	* 10566: Src/glob.c: change invocation of patgetglobflags
	to use two arguments.

2000-04-06  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10547: Doc/Zsh/expn.yo, Misc/globtests, Src/pattern.c,
	Src/subst.c, Test/11glob.ztst, Test/ztst.zsh: add
	(#s) and (#e) to match at start and end of string.

2000-04-06  Andrew Main  <zefram@zsh.org>

	* zefram2: Src/lex.c: Support "3&> foo" etc.

2000-04-06  Andrew Main  <zefram@zsh.org>

	* zefram1: configure.in, Etc/zsh-development-guide: List of tools
	required for development work, and a little more conspicuous
	explanation of the config.status hack.

2000-04-06  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10543: Makefile.in: avoid distcleaning Test twice

	* 10542: Completion/Core/_files, Doc/Zsh/compsys.yo: tag in
	file-patterns optional, use `files' as default

	* 10531: Src/init.c: use `zsh' as command name in error messages
	even with -c

2000-04-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10524: Util/mkdisttree.sh: always copy files to tarred tree;
	chmod g-s.

	* Oliver: 10519: Src/utils.c, Doc/Zsh/compsys.yo: AIX dependencies
	and minor typo in docs.

	* Alexandre: 10516: Completion/User/_prcs: diff options behaviour.
	
	* 10513: Src/glob.c, Doc/Zsh/expn.yo: glob order qualifier (od)
	implements depth-first ordering.

2000-04-05  Bart Schaefer  <schaefer@zsh.org>

	* 10499: Makefile.in: Dependencies relative to $(sdir).

2000-04-05  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10514: Completion/Base/_arguments, Doc/Zsh/compsys.yo: